KSBWI-897, KSBWI-898 layout issues in Safari and mobile browsers

--- a/src/js/Components/Legend/Legend.scss
+++ b/src/js/Components/Legend/Legend.scss
@@ -5,14 +5,14 @@
    flex-wrap: wrap;
 
    li {
-      flex: 1;
+      flex: 1 0 122px;
       list-style: none;
       display: flex;
       align-items: center;
       margin: 10px 20px 10px 0;
 
       :local(.circle) {
-         flex: 0;
+         flex: 0 0 22px;
          line-height: 0;
          margin-right: 8px;
       }
